2007-01-22    <tino@firebird.03.softkill.net>

	* .cvsignore.dist: added *.cvsigore* as I need this nearly quite
	too often =8-/

2006-12-12    <tino@firebird.03.softkill.net>

	* main_getopt.h: added

	* proc.h (tino_wait_child_exact): now uses
	tino_wait_child_status_string

2006-11-15    <tino@firebird.03.softkill.net>

	* slist.h (tino_glist_destroy, tino_slist_free)
	(tino_slist_iterate, tino_slist_iterate_0, tino_glist_count)
	(tino_glist_first, tino_glist_first, tino_glist_free): NULL
	pointers to lists or entries do no more SEGV
	(tino_glist_add, tino_glist_fetchfree, tino_glist_next) 
	(tino_glist_data): FATALs added in case of NULL pointer

2006-11-13    <tino@firebird.03.softkill.net>

	* filetool.h (TINO_DRIVE_SEP_CHAR, TINO_PATH_SEP_CHAR): prefixed
	with TINO_

2006-11-10    <tino@firebird.03.softkill.net>

	* Makefile.proto (Makefile): added to replace - in filenames by _

	* strprintf.h (tino_str_vprintf_null): bug fixed due to new
	TINO_VA_LIST

	* arg.h: need stdio to compile for some reason

2006-10-28    <tino@geht.net>

	* md5.h (tino_md5_bin): added

	* data.h: pos, size, seek and intr added
	(tino_data_read_all): added

2006-10-15    <tino@firebird.03.softkill.net>

	* md5.h (tino_md5_hex, tino_md5_buf, tino_md5_string): added

	* file.h (tino_file_chdir): added

	* buf_printf.h (tino_buf_add_vsprintf): now uses tino_vsnprintf

	* strprintf.h (tino_str_vprintf_null): now uses tino_vsnprintf

	* ex.h (tino_verror_std): now uses tino_vprintf

	* arg.h (tino_vfprintf, tino_vsnprintf): added

2006-10-14    <tino@firebird.03.softkill.net>

	* filetool.h (tino_file_gluebuffer): max now can be NULL
	(tino_file_realpath): added

2006-10-04    <tino@firebird.03.softkill.net>

	* main.h, hup.h, sock.h: tino_va_* routines instead of va_*

	* fatal.h, ex.h: changed to tino_va_* routines instead of va_*
	routines

	* Makefile (distclean), Makefile.proto (distclean): cleaning of
	old versioned files (.#*), too
